# elf_fgm

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  debug_logging.conf  logging.conf  pyproject.toml
docker/: build.sh  gitlab-ci.Dockerfile
log/: README.md
sp/: __init__.py  floop_ela_2.csv  floop_ela_5deg.csv  floop_elb_1.csv  pdb.txt
sp/db/: science_downlink_crud.py
sp/endpoints/: base.py  fgm_calib.py  general.py  jwu_test.py  parameter.py  science_downlink.py
sp/endpoints/function/: Bplot.py  coordinate.py  cross_time.py
sp/fgm_utils/: 20220114_184604_ela.csv  20220114_184604_elb.csv  20220114_184945_ela.csv  20220114_185838_elb.csv  20220114_190218_ela.csv  20220114_201808_elb.csv  20220114_202146_ela.csv  20220429_071357_elb.csv  __init__.py  __main__.py  config.py  ela_fgm_data_availability.csv  elb_fgm_data_availability.csv  eventlist.py  orbits_fgm_cal_elb.csv  parameter.py
sp/fgm_utils/att_csv/: 20210317_1829_1851_att_gei.csv
sp/fgm_utils/f_loop/: 2021-03-08_19_run3_elb.csv  2021-03-23_16_run3_elb.csv  2021-04-14_04_run3_elb.csv  2021-07-27_00_runAll_elb.csv  2022-01-01_13_run3_elb.csv  2022-01-03_00_run3_elb.csv  2022-03-09_15_run3_elb.csv  2022-04-01_11_run3_elb.csv  2022-06-14_01_run3_elb.csv  2022-08-17_00_run3_elb.csv  2022-09-08_04_runAll_elb.csv  floop_plot.py  rotAng_loop_ela_360_20190430_183052.csv  rotAng_loop_ela_360_20190806_073926.csv  rotAng_loop_ela_360_20220114_184945.csv  rotAng_loop_ela_360_20220114_202146.csv  (+10 more)
test/endpoints/: test_base.py  test_general.py  test_science_downlink.py
test/utils/: test_math_utils.py
(+241 files in other folders)
